2008-10-16  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (is_really_cms_encrypted): Extend to detect unknown
	message types.
	(mapi_change_message_class): Adjust for this change.
	(mapi_change_message_class): Factor code out to ...
	(change_message_class_ipm_note) 
	(change_message_class_ipm_note_smime) 
	(change_message_class_ipm_note_smime_multipartsigned) 
	(change_message_class_ipm_note_secure_cex): New.

2008-10-15  Werner Koch  <wk@g10code.com>

	* engine-assuan.c (op_assuan_sign): Send the new --protocl option
	to the server.

2008-09-30  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (mapi_change_message_class): Special handling for
	MultipartSigned if S/MIME support is disabled.

2008-08-06  Werner Koch  <wk@g10code.com>

	* olflange-dlgs.cpp (GPGOptionsDlgProc): Disable S/MIME notice.

2008-08-05  Werner Koch  <wk@g10code.com>

	* ext-commands.cpp (InstallCommands): Display protocolicons only
	for OL2007.
	* olflange.cpp (get_ol_main_version): New.

	* message.cpp (message_decrypt): Save a signature verification
	result.
	* mimeparser.c (mime_decrypt): Implement verification of included
	signatrues.  This feature got lost during the removal of nested
	crypto operations.

2008-08-04  Werner Koch  <wk@g10code.com>

	* olflange.cpp (install_forms): New.
	(GpgolExt): Install forms if needed.
	* common.c (get_data_dir): New.
	* common.h (struct): Add field FORMS_REVISION.
	* main.c (read_options, write_options): Read and write that option.

2008-07-31  Werner Koch  <wk@g10code.com>

	* ext-commands.h (class GpgolExtCommands): Add m_nCmdRevertFolder.
	* ext-commands.cpp (GpgolExtCommands, InstallCommands): Ditto.
	(DoCommand): Implement RevertFolder command.

	* common.h (struct): Add variable DISABLE_GPGOL.
	* session-events.cpp (OnDelivery): Make use of that variable.
	* message.cpp (message_incoming_handler): Ditto.
	* user-events.cpp (OnSelectionChange): Ditto
	* message-events.cpp (OnRead, OnReadComplete, OnWrite) 
	(OnWriteComplete): Ditto